--- a/dnd-upgrade/src/dnd-sheet-list.html
+++ b/dnd-upgrade/src/dnd-sheet-list.html
@@ -87,6 +87,10 @@
                 hasSheet: {
                     type: Boolean,
                     value: false
+                },
+                sheetList: {
+                    type: Object,
+                    notify: true
                 }
             },
 
