--- a/dnd-upgrade/src/dnd-app.html
+++ b/dnd-upgrade/src/dnd-app.html
@@ -23,11 +23,11 @@
 
         <style>
             :root {
-                --primary-color: #9E9E9E;
-                --darker-primary-color: #616161;
-                --light-primary-color: #F5F5F5;
+                --primary-color: #673AB7;
+                --darker-primary-color: #512DA8;
+                --light-primary-color: #D1C4E9;
                 --secondary-color: #03A9F4;
-                --primary-text: #F5F5F5;
+                --primary-text: #212121;
                 --secondary-text: #727272;
                 --divider-color: #B6B6B6;
 
