Removing useless css

--- a/dnd-upgrade/src/dnd-app.html
+++ b/dnd-upgrade/src/dnd-app.html
@@ -48,6 +48,11 @@
                 --paper-icon-button-ink-color: white;
             }
 
+            app-toolbar {
+                background-color: var(--primary-color);
+                color: #fff;
+            }
+
             .drawer-list {
                 margin: 0 16px;
             }
