--- a/dnd-upgrade/src/dnd-sheet-create.html
+++ b/dnd-upgrade/src/dnd-sheet-create.html
@@ -42,6 +42,7 @@
 
         <paper-tabs noink
                     scrollable
+                    hide-scroll-buttons
                     selected="{{ tabSelected }}">
             <paper-tab>Basic</paper-tab>
             <paper-tab>Status</paper-tab>
