--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -8,7 +8,7 @@
 
         <title>Dungeon 'n Dices</title>
 
-        <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
+        <link rel="shortcut icon" sizes="48x48" href="/images/icon_48.png">
 
         <meta name="theme-color" content="#fff">
         <link rel="manifest" href="/manifest.json">
