--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -50,7 +50,7 @@
                 -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
                 -webkit-user-select: none;      /* prevent copy paste, to allow, change 'none' to 'text' */
                 margin: 0;
-                font-family: 'Roboto', 'Noto', sans-serif;
+                font-family: 'Roboto', sans-serif, 'Noto';
                 line-height: 1.5;
                 min-height: 100vh;
                 background-color: #eee;
