--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -22,6 +22,10 @@
                 margin-bottom: 16px;
             }
 
+            paper-dropdown-menu {
+                width: 100%;
+            }
+
             paper-fab {
                 position: absolute;
                 bottom: 16px;
