--- a/dnd-upgrade/src/dnd-sheet-list.html
+++ b/dnd-upgrade/src/dnd-sheet-list.html
@@ -23,7 +23,7 @@
             }
 
             a {
-                position: absolute;
+                position: fixed;
                 bottom: 16px;
                 right: 16px;
             }
