--- a/dnd-upgrade/src/dnd-app.html
+++ b/dnd-upgrade/src/dnd-app.html
@@ -54,6 +54,9 @@
                 background-color: var(--primary-color);
                 color: #fff;
             }
+            app-toolbar > div {
+                padding-left: 8px;
+            }
 
             .drawer-list {
                 margin: 0 16px;
@@ -113,7 +116,7 @@
                     <app-toolbar>
                         <paper-icon-button icon="menu"
                                            drawer-toggle></paper-icon-button>
-                        <div title>Dungeon 'n Dices</div>
+                        <div title>Sheets 'n Dices</div>
                     </app-toolbar>
                 </app-header>
 
