--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link rel="import" href="app/dungeon-dices.html">
 
         <title>Dungeon 'n Dices</title>
-        <meta name="description" content="The RPG Generic Sheet Organizer">
+        <meta name="description" content="The Generic RPG Sheet Manager">
     </head>
 
     <body unresolved>
