--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -6,12 +6,21 @@
         <!-- Mobile -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-        <title>Dungeon 'n Dices</title>
+        <title>Sheets 'n Dices</title>
+        <meta name="description" content="The Generic RPG Sheet Manager">
 
-        <link rel="shortcut icon" sizes="48x48" href="/images/icon_48.png">
+        <link rel="shortcut icon" sizes="72x72" href="/images/icon_72.png">
 
-        <meta name="theme-color" content="#fff">
+        <meta name="theme-color" content="#673AB7">
+
         <link rel="manifest" href="/manifest.json">
+
+        <!-- Chrome / Android -->
+        <meta name="mobile-web-app-capable" content="yes">
+
+        <!-- Safari / iOS -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
         <script>
             // setup Polymer options
