--- a/dnd-upgrade/src/create-resources-tab.html
+++ b/dnd-upgrade/src/create-resources-tab.html
@@ -1,12 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-card/paper-card.html">
-<link rel="import" href="../bower_components/paper-input/paper-input-container.html">
-<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
+
+<link rel="import" href="create-resources-card.html">
 
 <dom-module id="create-resources-tab">
     <template>
@@ -18,29 +14,25 @@
                 padding: 16px;
             }
 
-            paper-card {
-                margin-bottom: 16px;
-            }
-
-            paper-dropdown-menu {
-                width: 100%;
-            }
-
             paper-fab {
                 position: absolute;
                 bottom: 16px;
                 right: 16px;
-            }
-
-            .card-actions-button {
-                color: #F44336;
             }
         </style>
 
         <template is="dom-repeat"
                   items="{{ resourcesList }}">
 
-            <paper-card>
+            <create-resources-card index="{{ index }}"
+                                   name="{{ item.name }}"
+                                   base-value="{{ item.baseValue }}"
+                                   status-base="{{ item.statusBase }}"
+                                   status-base-modifier="{{ item.statusBaseModifier }}"
+                                   level-modifier="{{ item.levelModifier }}"
+                                   status-list="{{ statusList }}"></create-resources-card>
+
+            <!--paper-card>
 
                 <div class="card-content">
                     <paper-input-container>
@@ -85,7 +77,7 @@
                                   on-click="_deleteCard">Delete</paper-button>
                 </div>
 
-            </paper-card>
+            </paper-card-->
 
         </template>
 
@@ -100,8 +92,22 @@
 
         is: "create-resources-tab",
 
+        properties: {
+            resourcesList: {
+                type: Array,
+                notify: true,
+                reflectToAttribute: true
+            },
+            statusList: {
+                type: Array
+            }
+        },
+
+        listeners: {
+            'requestDeleteResources': '_deleteResources'
+        },
+
         _newResources: function(e){
-            console.log("Resources Card Add");
             this.push("resourcesList", {
                 name: "HP/MP/...",
                 value: 0,
@@ -114,10 +120,8 @@
             });
         },
 
-        _deleteCard: function(e){
-            console.log("Resource Card Deleted");
-            console.log(e);
-            //document.querySelector("sheet-creation").splice('newSheet.resourcesList', this.index, 1);
+        _deleteResources: function(e){
+            this.splice('resourcesList', e.detail.index, 1);
         }
 
     });
