--- a/dnd-upgrade/src/create-status-card.html
+++ b/dnd-upgrade/src/create-status-card.html
@@ -3,13 +3,12 @@
 <link rel="import" href="../bower_components/paper-input/paper-input-container.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 
-<dom-module id="status-card">
+<dom-module id="create-status-card">
     <template>
         <style>
             :host {
-                width: 100%;
-                @apply(--layout-horizontal);
-                @apply(--layout-center-justified);
+                display: block;
+                @apply(--layout-vertical);
             }
 
             paper-card {
@@ -43,7 +42,7 @@
             </div>
             <div class="card-actions">
                 <paper-button class="card-actions-button"
-                              on-click="_deleteCard">Delete</paper-button>
+                              on-click="_requestDeleteStatus">Delete</paper-button>
             </div>
         </paper-card>
     </template>
@@ -63,11 +62,6 @@
                 notify: true,
                 reflectToAttribute: true
             },
-            value: {
-                type: String,
-                notify: true,
-                reflectToAttribute: true
-            },
             baseValue: {
                 type: String,
                 notify: true,
@@ -77,20 +71,13 @@
                 type: String,
                 notify: true,
                 reflectToAttribute: true
-            },
-            persistBonus: {
-                type: String,
-                notify: true,
-                reflectToAttribute: true
-            },
-            volatileBonus: {
-                type: String,
-                notify: true,
-                reflectToAttribute: true
             }
         },
 
-        _requestDeleteStatusCard: function(e){
+        _requestDeleteStatus: function(e){
+            this.fire('requestDeleteStatus', {
+                index: this.index
+            });
         }
     });
 </script>
