--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -1,12 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-card/paper-card.html">
-<link rel="import" href="../bower_components/paper-input/paper-input-container.html">
-<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
+
+<link rel="import" href="create-defenses-card.html">
 
 <dom-module id="create-defenses-tab">
     <template>
@@ -18,74 +14,23 @@
                 padding: 16px;
             }
 
-            paper-card {
-                margin-bottom: 16px;
-            }
-
-            paper-dropdown-menu {
-                width: 100%;
-            }
-
             paper-fab {
                 position: absolute;
                 bottom: 16px;
                 right: 16px;
-            }
-
-            .card-actions-button {
-                color: #F44336;
             }
         </style>
 
         <template is="dom-repeat"
                   items="{{ defensesList }}">
 
-            <paper-card>
-
-                <div class="card-content">
-                    <paper-input-container>
-                        <label>Name</label>
-                        <input is="iron-input"
-                               bind-value="{{ item.name }}">
-                    </paper-input-container>
-
-                    <paper-input-container>
-                        <label>Initial Value</label>
-                        <input is="iron-input"
-                               bind-value="{{ item.baseValue }}">
-                    </paper-input-container>
-
-                    <paper-dropdown-menu label="Status Modificador">
-                        <paper-listbox class="dropdown-content"
-                                       attr-for-selected="status-name"
-                                       selected="{{ item.statusBase }}">
-                            <paper-item status-name="None">None</paper-item>
-                            <template is="dom-repeat"
-                                      items="{{ statusList }}">
-                                <paper-item status-name="{{ item.name }}">{{ item.name }}</paper-item>
-                            </template>
-                        </paper-listbox>
-                    </paper-dropdown-menu>
-
-                    <paper-input-container>
-                        <label>Value Modifier per Status Point</label>
-                        <input is="iron-input"
-                               bind-value="{{ item.statusBaseModifier }}">
-                    </paper-input-container>
-
-                    <paper-input-container>
-                        <label>Value Modifier per Level</label>
-                        <input is="iron-input"
-                               bind-value="{{ item.levelModifier }}">
-                    </paper-input-container>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button class="card-actions-button"
-                                  on-click="_deleteCard">Delete</paper-button>
-                </div>
-
-            </paper-card>
+            <create-defenses-card index="{{ index }}"
+                                  name="{{ item.name }}"
+                                  base-value="{{ item.baseValue }}"
+                                  status-base="{{ item.statusBase }}"
+                                  status-base-modifier="{{ item.statusBaseModifier }}"
+                                  level-modifier="{{ item.levelModifier }}"
+                                  status-list="[[ statusList ]]"></create-defenses-card>
 
         </template>
 
@@ -100,10 +45,24 @@
 
         is: "create-defenses-tab",
 
+        properties: {
+            defensesList: {
+                type: Array,
+                notify: true,
+                reflectToAttribute: true
+            },
+            statusList: {
+                type: Array
+            }
+        },
+
+        listeners: {
+            'requestDeleteDefenses': '_deleteDefenses'
+        },
+
         _newDefenses: function(e){
-            console.log("Defenses Card Add");
             this.push("defensesList", {
-				name: "Armor",
+				name: "Armor/Magic Resistence/...",
 				value: 0,
 				baseValue: 0,
 				statusBase: "None",
@@ -114,10 +73,8 @@
 			});
         },
 
-        _deleteCard: function(e){
-            console.log("Defense Card Deleted");
-            console.log(e);
-            //document.querySelector("sheet-creation").splice('newSheet.defensesList', this.index, 1);
+        _deleteDefenses: function(e){
+            this.splice('defensesList', e.detail.index, 1);
         }
 
     });
