--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
-<link rel="import" href="create-defenses-card.html">
+<link rel="import" href="create-statusbased-card.html">
 
 <dom-module id="create-defenses-tab">
     <template>
@@ -24,13 +24,13 @@
         <template is="dom-repeat"
                   items="{{ defensesList }}">
 
-            <create-defenses-card index="{{ index }}"
+            <create-statusbased-card index="{{ index }}"
                                   name="{{ item.name }}"
                                   base-value="{{ item.baseValue }}"
                                   status-base="{{ item.statusBase }}"
                                   status-base-modifier="{{ item.statusBaseModifier }}"
                                   level-modifier="{{ item.levelModifier }}"
-                                  status-list="[[ statusList ]]"></create-defenses-card>
+                                  status-list="[[ statusList ]]"></create-statusbased-card>
 
         </template>
 
@@ -57,7 +57,7 @@
         },
 
         listeners: {
-            'requestDeleteDefenses': '_deleteDefenses'
+            'requestDeleteCard': '_deleteDefenses'
         },
 
         _newDefenses: function(e){
