--- a/dnd-upgrade/src/create-resources-tab.html
+++ b/dnd-upgrade/src/create-resources-tab.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
-<link rel="import" href="create-resources-card.html">
+<link rel="import" href="create-statusbased-card.html">
 
 <dom-module id="create-resources-tab">
     <template>
@@ -24,13 +24,13 @@
         <template is="dom-repeat"
                   items="{{ resourcesList }}">
 
-            <create-resources-card index="{{ index }}"
+            <create-statusbased-card index="{{ index }}"
                                    name="{{ item.name }}"
                                    base-value="{{ item.baseValue }}"
                                    status-base="{{ item.statusBase }}"
                                    status-base-modifier="{{ item.statusBaseModifier }}"
                                    level-modifier="{{ item.levelModifier }}"
-                                   status-list="[[ statusList ]]"></create-resources-card>
+                                   status-list="[[ statusList ]]"></create-statusbased-card>
 
         </template>
 
@@ -57,7 +57,7 @@
         },
 
         listeners: {
-            'requestDeleteResources': '_deleteResources'
+            'requestDeleteCard': '_deleteResources'
         },
 
         _newResources: function(e){
