--- a/dnd-upgrade/src/create-skills-tab.html
+++ b/dnd-upgrade/src/create-skills-tab.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
-<link rel="import" href="create-skills-card.html">
+<link rel="import" href="create-statusbased-card.html">
 
 <dom-module id="create-skills-tab">
     <template>
@@ -24,13 +24,13 @@
         <template is="dom-repeat"
                   items="{{ skillsList }}">
 
-            <create-skills-card index="{{ index }}"
+            <create-statusbased-card index="{{ index }}"
                                 name="{{ item.name }}"
                                 base-value="{{ item.baseValue }}"
                                 status-base="{{ item.statusBase }}"
                                 status-base-modifier="{{ item.statusBaseModifier }}"
                                 level-modifier="{{ item.levelModifier }}"
-                                status-list="[[ statusList ]]"></create-skills-card>
+                                status-list="[[ statusList ]]"></create-statusbased-card>
 
         </template>
 
@@ -57,7 +57,7 @@
         },
 
         listeners: {
-            'requestDeleteSkills': '_deleteSkills'
+            'requestDeleteCard': '_deleteSkills'
         },
 
         _newSkills: function(e){
