Data Binding Updated

--- a/dnd-upgrade/src/create-basic-tab.html
+++ b/dnd-upgrade/src/create-basic-tab.html
@@ -62,28 +62,23 @@
         properties: {
             name: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             job: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             race: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             level: {
                 type: Number,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             system: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             }
         }
 
