--- a/dnd-upgrade/src/create-status-card.html
+++ b/dnd-upgrade/src/create-status-card.html
@@ -59,18 +59,15 @@
             },
             name: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             baseValue: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             levelModifier: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             }
         },
 
