--- a/dnd-upgrade/src/create-status-tab.html
+++ b/dnd-upgrade/src/create-status-tab.html
@@ -47,8 +47,7 @@
         properties: {
             statusList: {
                 type: Array,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             }
         },
 
