--- a/dnd-upgrade/src/create-statusbased-card.html
+++ b/dnd-upgrade/src/create-statusbased-card.html
@@ -84,29 +84,24 @@
             },
             name: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             baseValue: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             statusBase: {
                 type: String,
                 value: "None",
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             statusBaseModifier: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             levelModifier: {
                 type: String,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
 			statusList: {
 				type: Array
