--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -48,8 +48,7 @@
         properties: {
             defensesList: {
                 type: Array,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             },
             statusList: {
                 type: Array
