Meta ViewPort Update

--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <!-- Mobile -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
         <title>Sheets 'n Dices</title>
         <meta name="description" content="The Generic RPG Sheet Manager">
